# coil_manipulator

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TentacleLenght.csv  Uopt2_Nav2_OPT2RE.csv  output.csv  test_csv.csv
.github/workflows/: main.yml
cmake/: FindPylon.cmake
docs/: CMakeLists.txt  Doxyfile.in  DxkdpLib_8hpp.html  DxkdpLib_8hpp.js  DxkdpLib_8hpp__dep__incl.map  DxkdpLib_8hpp__dep__incl.md5  DxkdpLib_8hpp__incl.map  DxkdpLib_8hpp__incl.md5  DxkdpLib_8hpp_source.html  HCoilMiddlewareLib_8hpp.html  HCoilMiddlewareLib_8hpp.js  HCoilMiddlewareLib_8hpp__incl.map  HCoilMiddlewareLib_8hpp__incl.md5  HCoilMiddlewareLib_8hpp_source.html  LakeshoreF71Lib_8hpp.html  LakeshoreF71Lib_8hpp.js  LakeshoreF71Lib_8hpp__dep__incl.map  LakeshoreF71Lib_8hpp__dep__incl.md5  LakeshoreF71Lib_8hpp__incl.map  LakeshoreF71Lib_8hpp__incl.md5  LakeshoreF71Lib_8hpp_source.html  LinActuatorLib_8hpp.html  LinActuatorLib_8hpp.js  LinActuatorLib_8hpp__dep__incl.map  LinActuatorLib_8hpp__dep__incl.md5  LinActuatorLib_8hpp__incl.map  LinActuatorLib_8hpp__incl.md5  LinActuatorLib_8hpp_source.html  Notebook.html  Notebook_8h_source.html  annotated.html  annotated_dup.js  blank.txt  classDXKDP__PSU-members.html  classDXKDP__PSU.html  classDXKDP__PSU.js  classLinearActuator-members.html  classLinearActuator.html  classLinearActuator.js  classMiddlewareLayer-members.html  (+66 more)
docs/html/: DxkdpLib_8hpp.html  DxkdpLib_8hpp__dep__incl.map  DxkdpLib_8hpp_source.html  HCoilMiddlewareLib_8hpp.html  HCoilMiddlewareLib_8hpp__incl.map  LakeshoreF71Lib_8hpp__incl.map  LinActuatorLib_8hpp__dep__incl.map  classDXKDP__PSU.html  classes.html  dir_000006_000010.html  dir_000011_000007.html  dir_00fc82204653c960cdb85575e58892f0.html  dir_1029a8c7e33b550df7310ec7c981ec27.html  dir_1029a8c7e33b550df7310ec7c981ec27.js  dir_1029a8c7e33b550df7310ec7c981ec27_dep.map  dir_1029a8c7e33b550df7310ec7c981ec27_dep.md5  dir_1c4cfb19889a6b7555326f1b8649af45.html  dir_1c4cfb19889a6b7555326f1b8649af45_dep.map  dir_359aa08183c0cbb47154ef6a1c605777_dep.map  dir_359aa08183c0cbb47154ef6a1c605777_dep.md5  dir_4d47a3359d3b6180483f780da6526630.html  dir_4d47a3359d3b6180483f780da6526630.js  dir_4d47a3359d3b6180483f780da6526630_dep.md5  dir_56ee346b97e7512c2dec63d7253e4199_dep.map  dir_5d48c1d1e6aff98443198e7d67ff69ff.html  dir_5d48c1d1e6aff98443198e7d67ff69ff_dep.map  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1_dep.map  dir_6719ab1f1f7655efc2fa43f7eb574fd1_dep.md5  dir_9d3a9dd217aa073d61e41e4bdb837830.html  dir_9d3a9dd217aa073d61e41e4bdb837830_dep.map  dir_9ec55c18d37f30583fefe91f9b916d60_dep.map  dir_c06a28fc7ae5c220e2b38a41964c93cd_dep.md5  dir_caf42e92d8868efa72879d6cd78ce684_dep.map  dir_caf42e92d8868efa72879d6cd78ce684_dep.md5  graph_legend.html  instructions_8hpp__dep__incl.md5  instructions_8hpp__incl.map  navtreedata.js  structinput__message-members.html  (+2 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_c.js  all_e.js  classes_3.js  classes_4.js  classes_5.js  enumvalues_2.js  functions_1.js  functions_5.js  functions_6.js  functions_7.js  functions_a.js  functions_b.js  searchdata.js  variables_2.js
docs/search/: all_1.js  all_11.js  all_12.js  all_16.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.html  enums_1.js  enumvalues_1.js  enumvalues_2.html  files_1.js  files_2.js  files_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_8.js  functions_9.js  functions_a.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_9.js  (+1 more)
docsBuild/: CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake
docsBuild/html/: LakeshoreF71Lib_8hpp__dep__incl.md5  LinActuatorLib_8hpp__incl.map  classLinearActuator-members.html  classMiddlewareLayer-members.html  dir_1029a8c7e33b550df7310ec7c981ec27_dep.md5  dir_56ee346b97e7512c2dec63d7253e4199_dep.map  instructions_8hpp_source.html  menudata.js  structinput__message.js
docsBuild/html/search/: enumvalues_0.js  files_0.js
dynamic_lungs_embed/4_DynamicLungs_working/: dynamic_lungs_embed
frontend_folder/build-coil_frontend-Desktop-Debug/: Makefile  coil_frontend  moc_fancyslider.cpp  moc_mainwindow.cpp  ui_mainwindow.h
frontend_folder/coil_frontend/: arcitem.cpp  arcitem.h  clickablerect.cpp  clickablerect.h  clickableview.cpp  clickableview.h  coil_frontend.pro  dragdopscene.cpp  dragdopscene.h  fancyslider.cpp  fancyslider.h  interactive_scene.cpp  interactive_scene.h  interactivescene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: PSULib_test.hpp  TeslameterTest.hpp  initial_serial_comm.h  middleware_test.h  nikita_cl_functions.hpp  nikita_setup.hpp  nikita_utilities.hpp  precomputation.hpp  segmentation.hpp  segmentation_ycbr_method_broken.hpp
include/libs/PSU/: PSU_LIB.h  instructions.h
include/opencv/: camera_test.h  tip_tracking.h
include/preliminary_tests/: initial_serial_comm.h
libs/: CMakeLists.txt  Notebook.h  README.md  mainpage.dox  mainpage.h
libs/src/: CMakeLists.txt  DxkdpLib.cpp  DxkdpLibNOSERIAL.cpp  HCoilMiddlewareLib.cpp  LakeshoreF71Lib.cpp  LinActuatorLib.cpp  Makefile  cmake_install.cmake
pete_optim/: ._opt_u.csv  opt_mag.csv  opt_qres.csv  opt_u.csv
src/: CMakeLists.txt  Jul15Tests.cpp  PSULib_test.cpp  TeslameterTest.cpp  biterrordebug.cpp  debugPolarity.cpp  initial_serial_comm.cpp  introducer.cpp  middleware_test.cpp  nikita_cl.cpp  precomputation.cpp  psu_test.cpp  set3DField.cpp  sweep.cpp  sweepPSU.cpp  waterfall.cpp
src/CppLinuxSerial/: SerialPort.cpp
src/archive/: PSULib_test.hpp  README.md  TeslameterTest.cpp  initial_serial_comm.cpp
src/libs/CppLinuxSerial/: CMakeLists.txt  SerialPort.cpp
src/libs/PSU/: CMakeLists.txt  PSU_LIB.cpp
src/opencv/: camera_test.cpp  pylonSave.cpp  run_camera.cpp  skeleton_method.cpp  thresholds_cal.cpp  tip_tracking.cpp
src/preliminary_tests/: initial_serial_comm.cpp  temp_test.cpp
submodules/: README.md
(+14 files in other folders)
